# thetutagoraway

./: .env.production  .gitignore  DEPLOY-HOREB.md  FACEBOOK-SETUP-GUIDE.html  HOREB-ROADMAP.md  README.md  Tutagora-GTM-Strategy.docx  Tutagora-GTM-Strategy.html  dashboard-improvements.patch  facebook-config.json  index.html  package-lock.json  package.json  render.yaml  sql-migration-tutor-recruitment.sql  tutagora-consulting-client-acquisition-strategy.docx  tutagora-consulting-client-acquisition-strategy.html  vite.config.js.timestamp-1772702373783-3960002ddfc1a.mjs
docs/: curriculum-alignment.md  curriculum-backlog.md
engine/: Dockerfile  README.md  demo.py  pyproject.toml  server.py
engine/data/: afm_graph.json  apm_graph.json  cambridge_graph.json  math_graph.json  sat_graph.json
engine/scripts/: audit_content.mjs  audit_graph.py  build_graph_viz.mjs  build_graph_viz_3d.mjs  calibrate.py  export_graph.mjs  quality_gate.mjs
engine/tests/: test_engine.py
engine/tutagora_engine/: __init__.py  ability.py  diagnostic.py  graph.py  mastery.py  params.py  scheduler.py  state.py
posters/: kcse-prep.html  study-tips.html  test-post.html  tutor-spotlight.html
public/: .htaccess  og-image.html  robots.txt  sitemap.xml
scripts/: test-engine.mjs
src/: AnimatedIconsPreview.jsx  App.jsx  ClubArt.jsx  ClubsPage.jsx  ConsultingPage.jsx  Messaging.jsx  PaymentModal.jsx  SchoolsPage.jsx  Spreadsheet.jsx  VideoRoom.jsx  agora.js  email.js  groupClassCategories.js  index.css  mpesa.js  paystack.js  supabase.js
tutagora-ai-tutor/: App.jsx.patch  INTEGRATION.md  (+1 more)
(+72 files in other folders)
